# src/models/user.rs
@@ -1,10 +1,11 @@
 use chrono::Utc;
 use serde::{Deserialize, Serialize};
+use sqlx::FromRow;
 use uuid::Uuid;
 
 use crate::models::media::MediaProvider;
 
-#[derive(Debug, Serialize, Deserialize, PartialEq, Clone)]
+#[derive(Debug, Serialize, Deserialize, PartialEq, Clone, FromRow)]
 pub struct User {
     pub id: Uuid,
     pub username: String,
@@ -42,39 +43,14 @@ impl User {
         provider: Option<MediaProvider>,
         access_token: Option<String>,
     ) -> Self {
-        let mut v = Self::default();
-        v.username = username;
-        v.avatar_url = avatar_url;
-        v.provider = provider.unwrap_or_default();
-        v.is_sandbox = access_token.is_none();
-        v.access_token = access_token;
-        v
-    }
-}
-
-#[cfg(test)]
-mod tests {
-    use super::*;
-
-    #[test]
-    fn test_user_is_sandbox_derived_from_access_token() {
-        let user_with_token = User::new(
-            "test_user".to_string(),
-            None,
-            Some(MediaProvider::MAL),
-            Some("token123".to_string()),
-        );
-        assert!(!user_with_token.is_sandbox);
-
-        let user_without_token = User::new(
-            "test_user".to_string(),
-            None,
-            Some(MediaProvider::MAL),
-            None,
-        );
-        assert!(user_without_token.is_sandbox);
-
-        let default_user = User::default();
-        assert!(default_user.is_sandbox);
+        let is_sandbox = access_token.is_none();
+        Self {
+            username,
+            avatar_url,
+            provider: provider.unwrap_or_default(),
+            is_sandbox,
+            access_token,
+            ..Default::default()
+        }
     }
 }
